--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -27,4 +27,4 @@ jobs:
       uses: orgoro/coverage@v3.2
       with:
         coverageFile: ./coverage/coverage.xml
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.MY_TOKEN }}
